# ralph_loop

./: .gitignore  AGENTS.md  Makefile  PHASE_1_ROADMAP.md  PHASE_2_ROADMAP.md  PHASE_3_ROADMAP.md  README.md  conftest.py  init.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  REVIEWER_CHECKLIST.md
core/: __init__.py  constants.py  detect_affected_tests.py  doctor.py  engine.py  generate_test_map.py  init.py  migrate.py  project_sync.py  ralph_build.sh  ralph_check_specs.py  ralph_health.sh  ralph_loop.sh  ralph_metrics.sh  ralph_metrics_viewer.py  ralph_performance_check.sh  ralph_preflight.sh  ralph_report.py  ralph_report.sh  ralph_validate.sh  report.py  run_ralph_loop.sh  setup.py  status.py  trajectory.py  validate.py
docs/: ARCHITECTURE.md  BUILD_SYSTEM_OVERVIEW.md  CHANGELOG.md  CONFIGURATION.md  DAILY_USAGE.md  DEPLOYMENT.md  FAQ.md  GETTING_STARTED.md  IMPROVEMENT_ROADMAP_PLAN.md  IMPROVEMENT_ROADMAP_SPEC.md  IMPROVEMENT_ROADMAP_TASKS.md  PHASE_C_FOLLOW_UP.md  PHASE_C_VERIFICATION.md  PHASE_D_FOLLOW_UP.md  TICKET_MANAGEMENT.md  TROUBLESHOOTING.md  VERSION_HISTORY.md  architectural-review-2026-06-26.md  architecture.md  configuration.md  daily-usage.md  deployment.md  development_workflow.md  faq.md  getting-started.md  getting_started.md  observability.md  orchestrator-roadmap.md  progress-isolation.md  ralph_documentation.html  system_test.md  ticket-management.md  v3-redesign.md  version-history.md
scripts/: generate_engine_snapshots.py  install.sh  ralph-watch.py  release.sh  version_bump.py
templates/: AGENTS.md.j2  PROGRESS.md.j2  PROMPT.md.j2  (+4 more)
(+156 files in other folders)
